WebSocket: ensure connecting throbber isn't cut off.

--- a/reddit_liveupdate/public/static/css/liveupdate.less
+++ b/reddit_liveupdate/public/static/css/liveupdate.less
@@ -194,6 +194,7 @@
 
             td {
                 padding: 0 0 .3em 0;
+                min-height: 18px; /* for the throbber */
 
                 &.connecting {
                     background: transparent url(../throbber.gif) no-repeat bottom right;
